--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/pelican-blueidea"]
 	path = themes/pelican-blueidea
 	url = https://github.com/nasskach/pelican-blueidea.git
+[submodule "pelican-plugins/pelican-toc"]
+	path = pelican-plugins/pelican-toc
+	url = https://github.com/edamsoft/pelican-toc
+[submodule "themes/Papyrus"]
+	path = themes/Papyrus
+	url = https://github.com/edam-software/Papyrus
