Update Hugo about.md and themepath to reflect site migration to Hugo

--- a/hugo-blog/hugo.toml
+++ b/hugo-blog/hugo.toml
@@ -2,6 +2,7 @@ baseURL = 'https://blog.ericarellano.tech'
 languageCode = 'en-us'
 title = 'Go, Python, AI, Devops, AWS, GCP, Cloud Architecture'
 timezone = 'America/Los_Angeles'
+themesDir = "../themes"
 theme = "PaperMod"
 
 [params]
