Updating GHA to overwrite gh-pages and test the token permission

--- a/.github/workflows/github_actions_deploy.yml
+++ b/.github/workflows/github_actions_deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
 
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -24,10 +27,10 @@ jobs:
       - name: Build Hugo site
         run: |
           cd hugo-blog
-          hugo --minify
+          hugo --minify --destination ../public
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: hugo-blog/public
+          publish_dir: ./public
