Updating DNS to use root as we will use the blog as top level and add dynamic content here later using Go

--- a/hugo-blog/hugo.toml
+++ b/hugo-blog/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://blog.ericarellano.tech'
+baseURL = 'https://ericarellano.tech'
 languageCode = 'en-us'
 title = 'Another Software Engineering Blog'
 timezone = 'America/Los_Angeles'
